--- a/CoTuongBackend.API/CoTuongBackend.API.csproj
+++ b/CoTuongBackend.API/CoTuongBackend.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoTuongBackend.Application\CoTuongBackend.Application.csproj" />
+    <ProjectReference Include="..\CoTuongBackend.Infrastructure\CoTuongBackend.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
