--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/CoTuongBackend.API/appsettings.json
+/CoTuongBackend.API/appsettings.Development.json
