--- a/CoTuongBackend.Infrastructure/CoTuongBackend.Infrastructure.csproj
+++ b/CoTuongBackend.Infrastructure/CoTuongBackend.Infrastructure.csproj
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CoTuongBackend.Domain\CoTuongBackend.Domain.csproj" />
   </ItemGroup>
 
 </Project>
