--- a/CoTuongBackend.Application/CoTuongBackend.Application.csproj
+++ b/CoTuongBackend.Application/CoTuongBackend.Application.csproj
@@ -8,10 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.10" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Common\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CoTuongBackend.Domain\CoTuongBackend.Domain.csproj" />
   </ItemGroup>
 
 </Project>
