--- a/CoTuongBackend.Application/CoTuongBackend.Application.csproj
+++ b/CoTuongBackend.Application/CoTuongBackend.Application.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <Folder Include="Common\" />
-    <Folder Include="Games\" />
+    <Folder Include="Games\Dtos\" />
   </ItemGroup>
 
   <ItemGroup>
