feat: Add Room Service

--- a/CoTuongBackend.Application/CoTuongBackend.Application.csproj
+++ b/CoTuongBackend.Application/CoTuongBackend.Application.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoTuongBackend.Domain\CoTuongBackend.Domain.csproj" />
+    <ProjectReference Include="..\CoTuongBackend.Infrastructure\CoTuongBackend.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
